--- a/Arc/index.html
+++ b/Arc/index.html
@@ -45,7 +45,8 @@
             <img src="Architecture/logoweb.png" class="navbar-brand navbar-nav logo_png"
                 @click="change_page('Time_To_Bloom')">
 
-            <ul data-aos="fade-down" v-if="what_page != 'Time_To_Bloom'" class="navbar-nav ml-auto menu_page" style="font-weight: bold;">
+            <ul data-aos="fade-down" v-if="what_page != 'Time_To_Bloom'" class="navbar-nav ml-auto menu_page"
+                style="font-weight: bold;">
                 <li class="nav-item">
                     <a class="nav-link button" @click="change_page('Home')">Home</a>
                 </li>
@@ -66,7 +67,8 @@
         <div v-if="what_page == 'Time_To_Bloom'" class="container Time_To_Bloom_container">
             <div class="row Time_To_Bloom_row">
                 <div class="cal-6">
-                    <p class="time_to_bloom_text" style="font-weight: bold;">Discover all<br>about law<br>for women<br>in Thailand</p>
+                    <p class="time_to_bloom_text" style="font-weight: bold;">Discover all<br>about law<br>for
+                        women<br>in Thailand</p>
                     <img class="time_to_bloom" src="Architecture/Time_To_Bloom_page/time_to_bloom.png"
                         @click="change_page('Home')">
                 </div>
@@ -82,8 +84,11 @@
         <!-- หน้า Home -->
         <div v-if="what_page == 'Home'" class="container">
             <div class="row">
-                <video data-aos-anchor-placement="top-center" data-aos="fade-right" src="Architecture/solve/homepage/Waterdrop1.mp4" autoplay muted style="margin: 0; left: -4vw;" class="col-6 home_bg_vdo"></video>
-                <div data-aos-anchor-placement="top-center" data-aos="fade-left" class="col-6" style="padding-right: -5.15625vw;">
+                <video data-aos-anchor-placement="top-center" data-aos="fade-right"
+                    src="Architecture/solve/homepage/Waterdrop1.mp4" autoplay muted style="margin: 0; left: -4vw;"
+                    class="col-6 home_bg_vdo"></video>
+                <div data-aos-anchor-placement="top-center" data-aos="fade-left" class="col-6"
+                    style="padding-right: -5.15625vw;">
                     <p class="topic_text home_topic_text" style="color: #5382bf; font-size: 2.417999vw; width: 40vw;">
                         {{info.Home[0].LawName}}
                     </p>
@@ -101,7 +106,8 @@
             </video>
             <div v-if="what_page == 'Home'" class="container">
                 <div data-aos-anchor-placement="top-center" data-aos="fade-down" class="home_text2">
-                    <p class="topic_text home_topic_text2" style="color: #5382bf; font-size: 2.418vw;     margin-left: -1.3vw;">
+                    <p class="topic_text home_topic_text2"
+                        style="color: #5382bf; font-size: 2.418vw;     margin-left: -1.3vw;">
                         {{info.Home[1].LawName}}
                     </p>
                     <p class="text" style="right: 20vw; width: 35vw;position: fixed;left: 14vw;">
@@ -117,31 +123,38 @@
             <div v-if="what_law == 'Main'" class="row justify-content-around">
                 <div class="col-2"></div>
                 <div class="col align-self-center text-center" v-if="!status_law[0]">
-                    <video src="Architecture/solve/flower/Anotherredflower/Anotherredflowerps.mp4"
-                        @mouseover="Blooming_flowers(true, 'vid6')" @mouseleave="Blooming_flowers(false, 'vid6')"
-                        id="vid6" width="200" height="200" muted style="margin-bottom: 3.1vw;"
+                    <img src="Architecture/solve/flower/Anotherredflower/Anotherredseed.png"
+                        @mouseover="Blooming_flowers_gif(true, 'img5')"
+                        @mouseleave="Blooming_flowers_gif(false, 'img5')" id="img5" @click="change_law('law0')"
+                        width="200" height="250">
+                    <!-- <video src="Architecture/solve/flower/Anotherredflower/Anotherredflowerps.mp4"
+                        @mouseover="Blooming_flowers(true, 'vid5')" @mouseleave="Blooming_flowers(false, 'vid5')"
+                        id="vid5" width="200" height="200" muted style="margin-bottom: 3.1vw;"
                         @click="change_law('law0')">
-                        <!-- <source src="Architecture/solve/flower/Anotherredflower/Anotherredflowerps.mp4"
-                    type="video/mp4"> -->
-                    </video> <br>
+                    </video>  -->
+                    <br>
                     <p>กฎหมายการเลือกตั้ง</p>
                 </div>
-                <div class="col align-self-center text-center" v-if="status_law[0]"><img @click="change_law('law0')" src="Architecture/solve/flower/Anotherredflower/Anotherredflower.png" style="width: 8.1828vw; height: 10.4361vw;  margin-bottom: 3.4vw;"><br>
+                <div class="col align-self-center text-center" v-if="status_law[0]"><img @click="change_law('law0')"
+                        src="Architecture/solve/flower/Anotherredflower/Anotherredflower.png"
+                        style="width: 8.1828vw; height: 10.4361vw;  margin-bottom: 3.4vw;"><br>
                     <p>กฎหมายการเลือกตั้ง</p>
                 </div>
                 <div class="col align-self-center text-center" v-if="!status_law[1]">
                     <img src="Architecture/solve/flower/Blackflower2/Blackseed2.png"
-                        @mouseover="Blooming_flowers_gif(true, 'img7')"
-                        @mouseleave="Blooming_flowers_gif(false, 'img7')" id="img7" @click="change_law('law1')"
+                        @mouseover="Blooming_flowers_gif(true, 'img6')"
+                        @mouseleave="Blooming_flowers_gif(false, 'img6')" id="img6" @click="change_law('law1')"
                         width="200" height="250">
                     <!-- <video src="Architecture/solve/flower/Blackflower2/Blackflowerps2.mp4"
-                        @mouseover="Blooming_flowers(true, 'vid7')" @mouseleave="Blooming_flowers(false, 'vid7')"
-                        id="vid7" width="200" height="250" muted style="margin: 0;" @click="change_law('law1')">
+                        @mouseover="Blooming_flowers(true, 'vid6')" @mouseleave="Blooming_flowers(false, 'vid6')"
+                        id="vid6" width="200" height="250" muted style="margin: 0;" @click="change_law('law1')">
                      </video>  -->
                     <br>
                     <p>กฎหมายลาคลอด</p>
                 </div>
-                <div class="col align-self-center text-center" v-if="status_law[1]"><img @click="change_law('law1')" src="Architecture/solve/flower/Blackflower2/Blackflower2.png" style="width: 160px; height: 160px; margin-bottom: 5vw; margin-top: .5vw;"><br>
+                <div class="col align-self-center text-center" v-if="status_law[1]"><img @click="change_law('law1')"
+                        src="Architecture/solve/flower/Blackflower2/Blackflower2.png"
+                        style="width: 160px; height: 160px; margin-bottom: 5vw; margin-top: .5vw;"><br>
                     <p>กฎหมายลาคลอด</p>
                 </div>
                 <div class="col"></div>
@@ -161,7 +174,8 @@
                     <p class="text" id="law_text1" style="width: 39vw; margin-left: -5vw; text-indent: 40px; ">
                         {{info.Law[0].LawMean1}}
                     </p>
-                    <p class="text" id="law_text1" style="width: 37vw; margin-left: -5vw; text-indent: 40px;  top: 23vw; ">
+                    <p class="text" id="law_text1"
+                        style="width: 37vw; margin-left: -5vw; text-indent: 40px;  top: 23vw; ">
                         {{info.Law[0].LawMean2}}</p>
                 </div>
             </div>
@@ -183,7 +197,7 @@
                     <p class="text" id="law_text2" style="text-indent: 40px; top: 10vw;">
                         {{info.Law[1].LawMean1}}
                     </p>
-                    <p class="text" id="law_text2"style="text-indent: 40px; width: 35vw;">
+                    <p class="text" id="law_text2" style="text-indent: 40px; width: 35vw;">
                         {{info.Law[1].LawMean2}}</p>
                 </div>
             </div>
@@ -296,7 +310,8 @@
                         {{info.Draftlaw[0].DLName1}}
                     </p>
                     </p>
-                    <p class="lay_text1 topic_text" id="draft_topic_text" style="width: 30vw; font-weight:lighter; margin-top: -1vw; font-size: 1.8vw;">
+                    <p class="lay_text1 topic_text" id="draft_topic_text"
+                        style="width: 30vw; font-weight:lighter; margin-top: -1vw; font-size: 1.8vw;">
                         {{info.Draftlaw[0].DLName2}}</p>
                     <p class="text" id="draft_text" style="text-indent: 40px;width: 33vw;  top: -10vw;">
                         {{info.Draftlaw[0].DLMean1}}
@@ -305,7 +320,7 @@
                 </div>
             </div>
             <div v-if="what_draft_law == 'draw_law1'" class="row">
-                <div class="col-5" >
+                <div class="col-5">
                     <video src="Architecture/solve/draftlaw/Married with children 1.mp4" autoplay muted
                         style="margin: 0;" class="vdo2 home_bg_vdo2">
                         <!-- <source src="Architecture/solve/draftlaw/Married with children 1.mp4" type="video/mp4"> -->
@@ -315,7 +330,8 @@
                     <p class="lay_text2 topic_text" style="width: 30vw; position: sticky; font-size: 2.418vw;">
                         {{info.Draftlaw[1].DLName1}}
                     </p>
-                    <p class="lay_text2 topic_text" style="width: 27vw; position: sticky;font-weight:lighter; margin-top: -1vw; font-size: 1.8vw;">
+                    <p class="lay_text2 topic_text"
+                        style="width: 27vw; position: sticky;font-weight:lighter; margin-top: -1vw; font-size: 1.8vw;">
                         {{info.Draftlaw[1].DLName2}}</p>
                     <p class="text" style="width: 37vw; margin-top: 1.562225475841874vw; position: sticky;">
                         {{info.Draftlaw[1].DLMean1}}
@@ -329,12 +345,13 @@
                         <!-- <source src="Architecture/solve/draftlaw/Safe city laws for women.mp4" type="video/mp4"> -->
                     </video>
                 </div>
-                <div class="col-7" >
+                <div class="col-7">
                     <!--แก้ layout-->
                     <p class="lay_text3 topic_text" style="position: sticky; font-size: 2.4vw;width: 40vw;">
                         {{info.Draftlaw[2].DLName1}}
                     </p>
-                    <p class="lay_text3 topic_text"style="font-weight: lighter; margin-top: -1vw; font-size: 1.6vw; width: 50vw;">
+                    <p class="lay_text3 topic_text"
+                        style="font-weight: lighter; margin-top: -1vw; font-size: 1.6vw; width: 50vw;">
                         {{info.Draftlaw[2].DLName2}}</p>
                     <p class="lay_text3_1 text" style="text-indent: 40px;">
                         {{info.Draftlaw[2].DLMean1}}<br>
@@ -350,10 +367,12 @@
                     </video>
                 </div>
                 <div class="col-7" style="left: -2vw; top: 2vw;">
-                    <p class="lay_text4 topic_text" style="width: 50vw;text-indent: 40px; margin-top:0;  margin-left: -2vw; font-size: 2.418vw;">
+                    <p class="lay_text4 topic_text"
+                        style="width: 50vw;text-indent: 40px; margin-top:0;  margin-left: -2vw; font-size: 2.418vw;">
                         {{info.Draftlaw[3].DLName1}}
                     </p>
-                    <p class="lay_text4 topic_text" style="width: 37vw;text-indent: 40px; margin-top:0; margin-left: -2vw; font-weight: lighter; margin-top: -1vw; font-size: 1.6vw;">
+                    <p class="lay_text4 topic_text"
+                        style="width: 37vw;text-indent: 40px; margin-top:0; margin-left: -2vw; font-weight: lighter; margin-top: -1vw; font-size: 1.6vw;">
                         {{info.Draftlaw[3].DLName2}}</p>
                     <p class="text" style="width: 37vw;text-indent: 40px; ">
                         {{info.Draftlaw[3].DLMean1}}<br>
@@ -370,17 +389,17 @@
                     </video>
                 </div>
                 <div class="col-7" style="left: -2vw;">
-                    <p class="lay_text5 topic_text" style="margin-bottom: 0;" >
+                    <p class="lay_text5 topic_text" style="margin-bottom: 0;">
                         {{info.Draftlaw[4].DLName1}}
                     </p>
-                    <p class="lay_text5 topic_text" style="font-weight: lighter; font-size: 1.8vw;"  >
+                    <p class="lay_text5 topic_text" style="font-weight: lighter; font-size: 1.8vw;">
                         {{info.Draftlaw[4].DLName2}}</p>
-                    <p class="text"style="width: 38vw;text-indent: 40px; ">
+                    <p class="text" style="width: 38vw;text-indent: 40px; ">
                         {{info.Draftlaw[4].DLMean1}}
                     </p>
-                    <p class="text"style="width: 38vw;text-indent: 40px; ">
+                    <p class="text" style="width: 38vw;text-indent: 40px; ">
                         {{info.Draftlaw[4].DLMean2}}
-                        </p>
+                    </p>
                 </div>
             </div>
         </div>
@@ -389,7 +408,8 @@
         <!-- หน้า Contact -->
         <div v-if="what_page == 'Contact'" class="container contact_container">
             <div class="row">
-                <div data-aos="fade-right" data-aos-anchor-placement="bottom-bottom" class="col-5 contact" style="right: 3vw;">
+                <div data-aos="fade-right" data-aos-anchor-placement="bottom-bottom" class="col-5 contact"
+                    style="right: 3vw;">
                     <nav class="navbar navbar-expand contact_menu">
                         <ul class="nav nav-pills" role="tablist">
                             <li class="nav-item">
@@ -426,7 +446,8 @@
                                 target="_blank">{{info.Contact[contact_mean].Web}}</a></p>
                     </div>
                 </div>
-                <div data-aos="fade-left" data-aos-anchor-placement="top-center" class="col-7 test" style="left: -3.8vw;">
+                <div data-aos="fade-left" data-aos-anchor-placement="top-center" class="col-7 test"
+                    style="left: -3.8vw;">
                     <iframe v-if="contact_mean == 0" class="test"
                         src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15483.088801953883!2d100.75716!3d14.031513!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x92513d71fa2aabf1!2z4Lih4Li54Lil4LiZ4Li04LiY4Li0IOC4m-C4p-C4teC4k-C4siDguKvguIfguKrguIHguLjguKUg4LmA4Lie4Li34LmI4Lit4LmA4LiU4LmH4LiB4LmB4Lil4Liw4Liq4LiV4Lij4Li1!5e0!3m2!1sth!2sth!4v1603780240501!5m2!1sth!2sth"
                         frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
@@ -480,7 +501,10 @@
             status_law: [false, false],
             status_draft_law: [false, false, false, false, false],
             contact_mean: 0,
-            time_out:"",
+            time_out: "",
+            flower_gif: ["Architecture/solve/flower/Whiteflowers/Whiteflowers.gif", "Architecture/solve/flower/Purpleflowers/Purpleflowers.gif", "Architecture/solve/flower/Pinkflowers/Pinkflowers.gif", "Architecture/solve/flower/Blueflowers/Blueflowers.gif", "Architecture/solve/flower/Redflowers/Redflowers.gif", "Architecture/solve/flower/Anotherredflower/Anotherredflower.gif", "Architecture/solve/flower/Blackflower2/Blackflower.gif"],
+            flower_png: ["Architecture/solve/flower/Whiteflowers/Whiteflowers.png", "Architecture/solve/flower/Purpleflowers/Purpleflowers.png", "Architecture/solve/flower/Pinkflowers/Pinkflowers.png", "Architecture/solve/flower/Blueflowers/Blueflowers.png", "Architecture/solve/flower/Redflowers/Redflowers2.png", "Architecture/solve/flower/Anotherredflower/Anotherredflower.png", "Architecture/solve/flower/Blackflower2/Blackflower2.png"],
+            seed_png: ["Architecture/solve/flower/Whiteflowers/.png", "Architecture/solve/flower/Purpleflowers/Purpleseed.png", "Architecture/solve/flower/Pinkflowers/Pinkseed.png", "Architecture/solve/flower/Blueflowers/Blueseed.png", "Architecture/solve/flower/Redflowers/Lastseed.png", "Architecture/solve/flower/Anotherredflower/Anotherredseed.png", "Architecture/solve/flower/Blackflower2/Blackseed2.png"]
         },
         methods: {
             change_page: function (page) {
@@ -540,13 +564,14 @@
             },
             Blooming_flowers_gif(status, id) {
                 console.log(parseInt(id.slice(3)));
+                var index = parseInt(id.slice(3));
                 var img = document.getElementById(id);
                 if (status) {
-                    img.src = "Architecture/solve/flower/Blackflower2/Blackflower.gif";
-                    this.time_out = setTimeout(function () { img.src = "Architecture/solve/flower/Blackflower2/Blackflower2.png"; }, 8500);
+                    img.src = this.flower_gif[index];
+                    this.time_out = setTimeout(function () {img.src = app.flower_png[index];  }, 2500);
                 } else {
                     clearTimeout(this.time_out);
-                    img.src = "Architecture/solve/flower/Blackflower2/Blackseed2.png";
+                    img.src = this.seed_png[index];
                 }
             }
         }
